Fixed Navbar visibility issue when navigating to Home page.

--- a/gift_website/src/stylesheets/home.css
+++ b/gift_website/src/stylesheets/home.css
@@ -17,7 +17,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.6);
     /* Translucent gray */
     display: flex;
     justify-content: center;
